deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webapp-deployment
  namespace: my-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-webapp
  template:
    metadata:
      labels:
        app: my-webapp
    spec:
      containers:
      - name: my-webapp
        image: lkapilcloud/myapp:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-webapp-service
  namespace: my-webapp
spec:
  selector:
    app: my-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-webapp-ingress
  namespace: my-webapp
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: example.com
      http:
        paths:
        - path: /crate-demo
          pathType: Prefix
          backend:
            service:
              name: my-webapp-service
              port:
                number: 80
  tls:
    - hosts:
      - example.com
      secretName: my-webapp-tls
